autocomplition for properties files
Signed-off-by: aserkes <andrii.serkes@oracle.com>